--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "leaflet": "^1.9.4",
     "react-leaflet": "^5.0.0",
     "lucide-react": "^0.475.0",
-    "@google/genai": "^1.37.0"
+    "@google/genai": "^1.37.0",
+    "@emailjs/browser": "^4.6.3"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
